if(NOT ARCH STREQUAL "MOS")
  add_subdirectory(Adobe-C++)
  add_subdirectory(BenchmarkGame)
  add_subdirectory(CoyoteBench)
endif()
add_subdirectory(Dhrystone)
if(ARCH STREQUAL "MOS")
  add_subdirectory(6502-compilers-bench)
else()
  add_subdirectory(Linpack)
  add_subdirectory(McGill)
  add_subdirectory(Misc)
  add_subdirectory(Misc-C++)
  add_subdirectory(Misc-C++-EH)
  add_subdirectory(Polybench)
  add_subdirectory(Shootout)
  add_subdirectory(Shootout-C++)
  add_subdirectory(SmallPT)
  add_subdirectory(Stanford)
endif()
